[package]
name = "gdapi"
version = "0.1.0"
authors = ["vaporoxx"]
edition = "2021"
description = "A wrapper around the Geometry Dash API"
repository = "https://github.com/gdapi-rs/gdapi"
license = "ISC"

[dependencies]
base64 = "0.13"
parking_lot = "0.12"
reqwest = "0.11"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["serde", "v4"]

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
